--- a/Poll/Storyboards/Results.storyboard
+++ b/Poll/Storyboards/Results.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Results-->
         <scene sceneID="9Ny-6S-9SK">
             <objects>
-                <tableViewController id="qd4-M9-WAl" sceneMemberID="viewController">
+                <tableViewController id="qd4-M9-WAl" customClass="ResultsTableViewController" customModule="Poll" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6dr-3r-VJb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -48,6 +48,8 @@
                             <outlet property="delegate" destination="qd4-M9-WAl" id="DD9-2A-RJ3"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Results" id="epd-6X-jiP"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9JQ-5Z-ESo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
